@@ -22,6 +22,7 @@ require "cproton"
 require "qpid_proton/described"
 require "qpid_proton/mapping"
 require "qpid_proton/array"
+require "qpid_proton/hash"
 require "qpid_proton/exceptions"
 require "qpid_proton/exception_handling"
 require "qpid_proton/message_format"
