@@ -60,6 +60,7 @@ end
 # Generates a random array of a random type.
 # Returns both the array and the type.
 def random_array(length, described = false, description = nil)
+  puts "Returning an array with #{length} values"
   result = []
   type = rand(128) % 4
   low = rand(512)
@@ -84,6 +85,17 @@ def random_array(length, described = false, description = nil)
 
   result.proton_array_header = Qpid::Proton::ArrayHeader.new(type, description)
 
+  puts "result = #{result}"
+  return result
+end
+
+# Generates a random hash of values.
+def random_hash(length)
+  result = {}
+  values = random_list(length)
+  values.each do |value|
+    result[random_string(64)] = value
+  end
   return result
 end
 
